1. Add params.json 2. Some fixes in HEADER sections (<a> added)

--- a/task_1/index.html
+++ b/task_1/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>NIMIS Site</title>
-</head>
+    </head>
     <body>
         <!--Begin CONTAINER-->
         <div class="container">
@@ -14,16 +14,15 @@
                 <div class="level-one">
                     <div class="button">
                         <i class="fa-delivery"></i> 
-                        GET FREE! SHIPPING ON ORDER OVER <span>$100</span>
+                        <a href="#">GET FREE! SHIPPING ON ORDER OVER <span>$100</span></a>
                     </div>
                     <div class="menu">
                         <ul>
-                            <li>LOGIN/REGISTER</li>
-                            <li>USD <img src="/path" alt="Language logo">
+                            <li><a href="#">LOGIN/REGISTER</a></li>
+                            <li><a href="#">USD</a> <img src="/path" alt="Language logo">
                                 <ul>
-                                    <li>LOGIN/REGISTER</li>
-                                    <li>USD
-                                    </li>
+                                    <li><a href="#">USD</a></li>
+                                    <li><a href="#">RUS</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -41,11 +40,11 @@
                         <img src="/path" alt="Site logo">
                     </div>
                     <div class="button">
-                        <i class="fa-heart"></i> WISHLIST
+                        <i class="fa-heart"></i> <a href="#">WISHLIST</a>
                         <span class="count">3</span>
                     </div>
                     <div class="button">
-                        <i class="fa-recycle"></i> CHECKOUT
+                        <i class="fa-recycle"></i> <a href="#">CHECKOUT</a>
                     </div>
                 </div>
                 <!--End LEVEL TWO-->
@@ -53,53 +52,59 @@
                 <div class="level-three">
                     <div class="menu">
                         <ul>
-                            <li>CATEGORY <img src="/path" alt="Menu list">
+                            <li><a href="#">CATEGORY <img src="/path" alt="Menu list"></a>
                                 <ul>
-                                    <li>T-SHIRTS &amp; VESTS</li>
-                                    <li>JUMBERS &amp; CARDIGANS</li>
-                                    <li>HOODIES &amp; SWEATS</li>
-                                    <li>SPORTS WEAR</li>
-                                    <li>COATS &amp; JACKETS</li>
-                                    <li>SHIRTS
+                                    <li><a href="#">T-SHIRTS &amp; VESTS</a></li>
+                                    <li><a href="#">JUMBERS &amp; CARDIGANS</a></li>
+                                    <li><a href="#">HOODIES &amp; SWEATS</a></li>
+                                    <li><a href="#">SPORTS WEAR</a></li>
+                                    <li><a href="#">COATS &amp; JACKETS</a></li>
+                                    <li><a href="#">SHIRTS</a>
                                         <ul>
-                                            <li>CHECK SHIRTS</li>
-                                            <li>DENIM SHIRTS</li>
-                                            <li>LONG SLEEVE SHIRTS</li>
-                                            <li>PLAIN SHIRTS</li>
-                                            <li>PRINTED SHIRTS</li>
-                                            <li>SHORT SLEEVE SHIRTS</li>
-                                            <li>SHORTSLEEVE DENIM SHIRTS</li>
+                                            <li><a href="#">CHECK SHIRTS</a></li>
+                                            <li><a href="#">DENIM SHIRTS</a></li>
+                                            <li><a href="#">LONG SLEEVE SHIRTS</a></li>
+                                            <li><a href="#">PLAIN SHIRTS</a></li>
+                                            <li><a href="#">PRINTED SHIRTS</a></li>
+                                            <li><a href="#">SHORT SLEEVE SHIRTS</a></li>
+                                            <li><a href="#">SHORTSLEEVE DENIM SHIRTS</a></li>
                                         </ul>
                                     </li>
-                                    <li>SHORTS</li>
-                                    <li>SWIMWEAR</li>
-                                    <li>TROUSERS</li>
-                                    <li>JEANS</li>
-                                    <li>ONESIES &amp; LONGEWEAR</li>
+                                    <li><a href="#">SHORTS</a></li>
+                                    <li><a href="#">SWIMWEAR</a></li>
+                                    <li><a href="#">TROUSERS</a></li>
+                                    <li><a href="#">JEANS</a></li>
+                                    <li><a href="#">ONESIES &amp; LONGEWEAR</a></li>
                                 </ul>
                             </li>
-                            <li>HOME</li>
-                            <li>SHOP</li>
-                            <li>ACCESSORIES</li>
-                            <li>BRANDS</li>
-                            <li>PAGES</li>
-                            <li>BLOG</li>
-                            <li>CART : 2 ITEMS
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">SHOP</a></li>
+                            <li><a href="#">ACCESSORIES</a></li>
+                            <li><a href="#">BRANDS</a></li>
+                            <li><a href="#">PAGES</a></li>
+                            <li><a href="#">BLOG</a></li>
+                            <li><a href="#">CART : 2 ITEMS</a>
                                 <ul class="cart-menu">
                                     <li class="cart-item">
                                         <img src="/path" alt="Img item">
-                                        MEN'S FASHION BLUE JEAN COAT
-                                        2 x &#36; 130.00
+                                        <span>
+                                            <a href="#">MEN'S FASHION BLUE JEAN COAT</a>
+                                            2 x &#36; 130.00
+                                        </span>
+                                        <span><a href="#">X</a></span>
                                     </li>
                                     <li class="cart-item">
                                         <img src="/path" alt="Img item">
-                                        JEAN FASHION COAT COAT
-                                        1 x &#36; 90.00
+                                        <span>
+                                            <a href="#">JEAN FASHION COAT COAT</a>
+                                            1 x &#36; 90.00
+                                        </span>
+                                        <span><a href="#">X</a></span>
                                     </li>
-                                    <li class="cart-total">SHORT SLEEVE SHIRTS</li>
+                                    <li class="cart-total">FREE SHIPPING <span>TOTAL &#36; 350</span></li>
                                     <li>
-                                        <button>VIEW CART</button>
-                                        <button>CHECK OUT</button>
+                                        <a class="cart-button" href="#">VIEW CART</a>
+                                        <a class="cart-button" href="#">CHECK OUT</a>
                                     </li>
                                 </ul>
                             </li>
