--- a/index.html
+++ b/index.html
@@ -114,6 +114,43 @@
                 <!--End LEVEL THREE-->
             </header>
             <!--End HEADER-->
+            <!--Begin BANNER-->
+            <div class="banner">
+                <!--Begin BANNER BODY-->
+                <div>
+                    <p><h1>SUMMER SALE</h1>
+                    GET UPTO <span style="color:#F08080">50&#37;</span> OFFER!
+                    <br/>
+                    <img src="/path" alt="Sep">
+                    <br/>
+                    <span style="color:#F08080">HOT</span> &amp; <span style="color:#F08080">TRENDY</span> <span style="color:#C0C0C0">BRANDED COLLECTION FOR MEN'S</span></p>
+                    <div class="button">
+                        <a href="#">DISCOVER COLLECTION</a>
+                    </div>
+                </div>
+                <!--End BANNER BODY-->
+                <!--Begin OFFER TAG-->
+                <div class="offer_tag">
+                    <div class="thread">
+                        <img src="/path" alt="thread">
+                    </div>
+                    <div class="circle">
+                        <img src="/path" alt="circle">
+                        <div class="point">
+                            <img src="/path" alt="point">
+                        </div>
+                        <div class="stroke">
+                            <img src="/path" alt="stroke">
+                            <div class="text">
+                                <p>GET 
+                                   20&#37;</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--End OFFER TAG-->
+            </div>
+            <!--End BANNER-->
         </div>
         <!--End CONTAINER-->
     </body>
