1. Some fixes; 2. Added "features"; 3. Added "promotion"; 4. Added "featured products"

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
             <div class="banner">
                 <!--Begin BANNER BODY-->
                 <div>
-                    <p><h1>SUMMER SALE</h1>
+                    <span style="font-size:70pt">SUMMER SALE</span><br/>
                     GET UPTO <span style="color:#F08080">50&#37;</span> OFFER!
                     <br/>
                     <img src="/path" alt="Sep">
                     <br/>
-                    <span style="color:#F08080">HOT</span> &amp; <span style="color:#F08080">TRENDY</span> <span style="color:#C0C0C0">BRANDED COLLECTION FOR MEN'S</span></p>
+                    <span style="color:#F08080">HOT</span> &amp; <span style="color:#F08080">TRENDY</span> <span style="color:#C0C0C0">BRANDED COLLECTION FOR MEN'S</span>
                     <div class="button">
                         <a href="#">DISCOVER COLLECTION</a>
                     </div>
@@ -151,6 +151,166 @@
                 <!--End OFFER TAG-->
             </div>
             <!--End BANNER-->
+            <!--Begin FEATURES-->
+            <div class="features">
+                <ul>
+                    <li>
+                        <p>01 (800) 433 633 DAILY 10.00 to 22.00</p>
+                    </li>
+                    <li>
+                        <p>FAST DELIVERY ACROSS AUSTRALIA</p>
+                    </li>
+                    <li>
+                        <p>30&#37; DISCOUNT ON ORDER OVER &#36;199</p>
+                    </li>
+                    <li>
+                        <p>14-DAY RETURN POLICY</p>
+                    </li>
+                </ul>
+                <div>
+                    ...............................................................
+                </div>
+            </div>
+            <!--End FEATURES-->
+            <!--Begin PROMOTION-->
+            <div class="promotion">
+                <div class="side-left">
+                    <span style="font-size:30pt; color:#F08080">HAUSNA</span><br/>
+                    MADE IN MEN'S WEAR
+                    <hr/>
+                    SEE OUR EXCLUSIVE COLLECTION
+                    <hr/>
+                    <div class="button">
+                        <a href="#">SHOP NOW</a>
+                    </div>
+                </div>
+                <div class="side-right">
+                    EXPLORE OUR NEW COLLECTION<br/>
+                    <span style="font-size:30pt; color:#F08080">WE KNOW YOUR FIT</span>
+                    <hr/>
+                    GET THE EXTRA <span style="color:#F08080">50&#37;</span> OFFER! TODAY ONLY
+                    <hr/>
+                    <div class="button">
+                        <a href="#">VIEW COLLECTION</a>
+                    </div>
+                </div>
+            </div>
+            <!--End PROMOTION-->
+            <!--Begin FEATURED PRODUCTS-->
+            <div class="featured-products">
+                <div class="description">
+                    <b>FEATURED PRODUCTS</b><br>
+                    SUMMER OFFER! GET EXTRA DISCOUNT UPTO 20&#37; FOR ALL COLLECT ON
+                </div>
+                <div class="wrapper">
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                NEW
+                            </span>
+                            <i class="fa-discount"></i>
+                            <span class="discount">
+                                -20&#37;
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        STRUCTURED COLLARLESS COAT<br>
+                        <span style="color:#F08080">&#36;133.20</span>
+                        <span style="text-decoration:line-through">&#36;148.00</span>
+                    </div>
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                NEW
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        SUPER CLOVER ROBE JACKET<br>
+                        <span style="color:#F08080">&#36;124.22</span>
+                        <span style="text-decoration:line-through">&#36;248.44</span>
+                    </div>
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                NEW
+                            </span>
+                            <i class="fa-discount"></i>
+                            <span class="discount">
+                                -25&#37;
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        FULL HAND ANIMAL JACKET<br>
+                        <span style="color:#F08080">&#36;100.00</span>
+                    </div>
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                SALE
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        MEN'S FASHION BLUE JEAN COAT<br>
+                        <span style="color:#F08080">&#36;130.00</span>
+                        <span style="text-decoration:line-through">&#36;150.00</span>
+                    </div>
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                NEW
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        AROS SLIM HEAVY CHINO<br>
+                        <span style="color:#F08080">&#36;181.00</span>
+                        <span style="text-decoration:line-through">&#36;212.00</span>
+                    </div>
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                NEW
+                            </span>
+                            <i class="fa-discount"></i>
+                            <span class="discount">
+                                -10&#37;
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        VOLV CHECKED CASUAL SHIRT<br>
+                        <span style="color:#F08080">&#36;95.66</span>
+                    </div>
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                NEW
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        YELLOW CLOVER ROBE JACKET<br>
+                        <span style="color:#F08080">&#36;100.00</span>
+                    </div>
+                    <div class="item">
+                        <div class="item-image">
+                            <i class="fa-rect"></i>
+                            <span class="rect">
+                                NEW
+                            </span>
+                            <img src="/path" alt="Item image">
+                        </div>
+                        HOUNDSMOOTH WOOL T-SHIRT<br>
+                        <span style="color:#F08080">&#36;168.00</span>
+                        <span style="text-decoration:line-through">&#36;212.00</span>
+                    </div>
+                </div>
+            </div>
+            <!--End FEATURED PRODUCTS-->
         </div>
         <!--End CONTAINER-->
     </body>
