Added "trenging clothing"

--- a/index.html
+++ b/index.html
@@ -172,6 +172,211 @@
                 </div>
             </div>
             <!--End FEATURES-->
+            <!--Begin TRENDING CLOTHING-->
+            <div class="trending-clothing">
+                <div class="description">
+                    <b>TRENDING CLOTHING</b><br>
+                    <hr />
+                    <span style="color:#C0C0C0">NEW</span> 
+                    <span style="color:#F08080"> X </span>
+                    TOP RATED 
+                    <span style="color:#F08080"> X </span>
+                    <span style="color:#C0C0C0">TRENDING</span>
+                    <span style="color:#F08080"> X </span>
+                    <span style="color:#C0C0C0">BEST OFFER</span>
+                </div>
+                <div class="content">
+                    <div class="mySlides">
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <i class="fa-discount"></i>
+                                <span class="discount">
+                                    -20&#37;
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            STRUCTURED COLLARLESS COAT<br>
+                            <span style="color:#F08080">&#36;133.20</span>
+                            <span style="text-decoration:line-through">&#36;148.00</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <div class="item-options">
+                                    <i class="fa-recycle"></i> <a href="#">ADD TO CART</a> | 
+                                    <i class="fa-heart"></i> | <i class="fa-find"></i>
+                                </div>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            SUPER CLOVER ROBE JACKET<br>
+                            <span style="color:#F08080">&#36;124.22</span>
+                            <span style="text-decoration:line-through">&#36;248.44</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <i class="fa-discount"></i>
+                                <span class="discount">
+                                    -25&#37;
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            FULL HAND ANIMAL JACKET<br>
+                            <span style="color:#F08080">&#36;100.00</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    SALE
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            MEN'S FASHION BLUE JEAN COAT<br>
+                            <span style="color:#F08080">&#36;130.00</span>
+                            <span style="text-decoration:line-through">&#36;150.00</span>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <i class="fa-discount"></i>
+                                <span class="discount">
+                                    -20&#37;
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            STRUCTURED COLLARLESS COAT<br>
+                            <span style="color:#F08080">&#36;133.20</span>
+                            <span style="text-decoration:line-through">&#36;148.00</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <div class="item-options">
+                                    <i class="fa-recycle"></i> <a href="#">ADD TO CART</a> | 
+                                    <i class="fa-heart"></i> | <i class="fa-find"></i>
+                                </div>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            SUPER CLOVER ROBE JACKET<br>
+                            <span style="color:#F08080">&#36;124.22</span>
+                            <span style="text-decoration:line-through">&#36;248.44</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <i class="fa-discount"></i>
+                                <span class="discount">
+                                    -25&#37;
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            FULL HAND ANIMAL JACKET<br>
+                            <span style="color:#F08080">&#36;100.00</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    SALE
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            MEN'S FASHION BLUE JEAN COAT<br>
+                            <span style="color:#F08080">&#36;130.00</span>
+                            <span style="text-decoration:line-through">&#36;150.00</span>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <i class="fa-discount"></i>
+                                <span class="discount">
+                                    -20&#37;
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            STRUCTURED COLLARLESS COAT<br>
+                            <span style="color:#F08080">&#36;133.20</span>
+                            <span style="text-decoration:line-through">&#36;148.00</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <div class="item-options">
+                                    <i class="fa-recycle"></i> <a href="#">ADD TO CART</a> | 
+                                    <i class="fa-heart"></i> | <i class="fa-find"></i>
+                                </div>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            SUPER CLOVER ROBE JACKET<br>
+                            <span style="color:#F08080">&#36;124.22</span>
+                            <span style="text-decoration:line-through">&#36;248.44</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    NEW
+                                </span>
+                                <i class="fa-discount"></i>
+                                <span class="discount">
+                                    -25&#37;
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            FULL HAND ANIMAL JACKET<br>
+                            <span style="color:#F08080">&#36;100.00</span>
+                        </div>
+                        <div class="item">
+                            <div class="item-image">
+                                <i class="fa-rect"></i>
+                                <span class="rect">
+                                    SALE
+                                </span>
+                                <img src="/path" alt="Item image">
+                            </div>
+                            MEN'S FASHION BLUE JEAN COAT<br>
+                            <span style="color:#F08080">&#36;130.00</span>
+                            <span style="text-decoration:line-through">&#36;150.00</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-center w3-section">
+                    <span class="hover"></span>
+                    <span class="hover"></span>
+                    <span class="hover"></span>
+                </div>
+            </div>
+            <!--End TRENDING CLOTHING-->
             <!--Begin PROMOTION-->
             <div class="promotion">
                 <div class="side-left">
@@ -200,6 +405,7 @@
             <div class="featured-products">
                 <div class="description">
                     <b>FEATURED PRODUCTS</b><br>
+                    <hr />
                     SUMMER OFFER! GET EXTRA DISCOUNT UPTO 20&#37; FOR ALL COLLECT ON
                 </div>
                 <div class="wrapper">
