1. Some fixes; 2. Add "blog"; 3. Add "testimonials".

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>NIMIS Site</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>NIMIS Site</title>
     </head>
     <body>
         <!--Begin CONTAINER-->
@@ -517,6 +517,69 @@
                 </div>
             </div>
             <!--End FEATURED PRODUCTS-->
+            <!--Begin BLOG-->
+            <div class="blog">
+                <div class="description">
+                    <b>FRESH FROM THE BLOG</b><br>
+                    <hr />
+                    <div class="empl_prev"></div>
+                    <div class="empl_next"></div>
+                </div>
+                <div class="content">
+                    <div class="mySlides">
+                        <div class="item">
+                            <div class="item-left">
+                                _<span style="color:#F08080">13</span><br />
+                                APRIL 2015 <i class="fa-comments"></i>12
+                                <hr>
+                                TRENDY CLOTH DESIGNS MADE FROM OUR TEAM <br />
+                                Trendy Collection
+                                <div class="button">
+                                    <a href="#">VIEW POST</a><i class="fa-arrow"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-left">
+                                _<span style="color:#F08080">12</span><br />
+                                APRIL 2015 <i class="fa-comments"></i>09
+                                <hr>
+                                TRENDY CLOTH DESIGNS MADE FROM OUR TEAM <br />
+                                Trendy Collection
+                                <div class="button">
+                                    <a href="#">VIEW POST</a><i class="fa-arrow"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--End BLOG-->
+            <!--Begin TESTIMONIALS-->
+            <div class="testimonials">
+                <div class="description">
+                    <i class="fa-dialog"></i>
+                    <b>LOVELY CLIENTS COMMENT</b>
+                    <hr />
+                </div>
+                <div class="content">
+                    <div class="mySlides">
+                        “It’s really Awesome Theme &amp; specialy made for brand online shopping, so this theme uniqe elements use to create your dream website and help to promote your Product.“
+                        <ul>
+                            <li>
+                                <b>SAN MICHLE</b>
+                                <p>DIRECTOR OF EXAMPLE LTD</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="w3-center w3-section">
+                    <span class="hover"></span>
+                    <span class="hover"></span>
+                    <span class="hover"></span>
+                </div>
+            </div>
+            <!--End TESTIMONIALS-->
         </div>
         <!--End CONTAINER-->
     </body>
