--- a/index.html
+++ b/index.html
@@ -580,6 +580,151 @@
                 </div>
             </div>
             <!--End TESTIMONIALS-->
+            <!--Begin BRAND LOGOS-->
+            <div class="brand-logos">
+                <b>BRANDING</b>
+                <div class="border">
+                ...............................................................<br />
+                ...............................................................
+                </div>
+                <div class="empl_prev"></div>
+                <div class="empl_next"></div>
+                <ul>
+                    <li>
+                        <img src="/path" alt="Old vintage">
+                    </li>
+                    <li>
+                        <img src="/path" alt="Vintage first">
+                    </li>
+                    <li>
+                        <img src="/path" alt="Sewn by">
+                    </li>
+                    <li>
+                        <img src="/path" alt="Lorem ipsum">
+                    </li>
+                    <li>
+                        <img src="/path" alt="Hand sewn">
+                    </li>
+                    <li>
+                        <img src="/path" alt="Vintage second">
+                    </li>
+                </ul>
+            </div>
+            <!--End BRAND LOGOS-->
+            <!--Begin FOOTER-->
+            <footer>
+                <!--Begin FOOTER TOP-->
+                <div class="footer-top">
+                    <div class="newsletter-wrapper">
+                        <i class="fa-letter"></i><a href="#">SIGNUP</a>
+                        <p>NEWSLETTER</p>
+                        <form action="/newsletter">
+                            <input type="text" class="message-input">
+                            <input type="submit" value="submit">
+                        </form>
+                    </div>
+                    <div class="credit-cards">
+                        <a href="#" class="paypal"></a>
+                        <a href="#" class="discover"></a>
+                        <a href="#" class="visa-electron"></a>
+                        <a href="#" class="master-card"></a>
+                        <a href="#" class="visa"></a>
+                    </div>
+                </div>
+                <!--End FOOTER TOP-->
+                <!--Begin SITE MAP-->
+                <div class="site-map">
+                    <div class="collumn">
+                        <h3>INFORMATION</h3>
+                        <ul>
+                            <li>
+                                <a href="#">New Products</a>
+                            </li>
+                            <li>
+                                <a href="#">Top Seller</a>
+                            </li>
+                            <li>
+                                <a href="#">Special</a>
+                            </li>
+                            <li>
+                                <a href="#">Manufactures</a>
+                            </li>
+                            <li>
+                                <a href="#">Suppliers</a>
+                            </li>
+                            <li>
+                                <a href="#">Our Stores</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="collumn">
+                        <h3>MY ACCOUNT</h3>
+                        <ul>
+                            <li>
+                                <a href="#">My Account</a>
+                            </li>
+                            <li>
+                                <a href="#">Personal Information</a>
+                            </li>
+                            <li>
+                                <a href="#">Addresses</a>
+                            </li>
+                            <li>
+                                <a href="#">Discounts</a>
+                            </li>
+                            <li>
+                                <a href="#">Order History</a>
+                            </li>
+                            <li>
+                                <a href="#">Your Vouchers</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="collumn">
+                        <h3>CUSTOMER SERVICE</h3>
+                        <ul>
+                            <li>
+                                <a href="#">Help &amp; Contact</a>
+                            </li>
+                            <li>
+                                <a href="#">Shipping &amp; Taxes</a>
+                            </li>
+                            <li>
+                                <a href="#">Return Policy</a>
+                            </li>
+                            <li>
+                                <a href="#">Careers</a>
+                            </li>
+                            <li>
+                                <a href="#">Affliates</a>
+                            </li>
+                            <li>
+                                <a href="#">Legal Notice</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="collumn">
+                        <h3>CONTACT INFO</h3>
+                        <p>Address: 44 New Design Street, Melbourne 005</p>
+                        <p>Phone: (01) 800 433 633</p>
+                        <p>Email: info@Example.com</p>
+                        <div class="soc-icon">
+                            <a href="#" class="fcb"></a>
+                            <a href="#" class="twt"></a>
+                            <a href="#" class="ggl"></a>
+                            <a href="#" class="ins"></a>
+                            <a href="#" class="rss"></a>
+                        </div>
+                    </div>
+                </div>
+                <!--End SITE MAP-->
+                <!--Begin COPYRIGHTS-->
+                <div class="copyrights">
+                    <p>COPYRIGHT &copy; MEN'SWAER. ALL RIGHTS RESRVED.</p>
+                </div>
+                <!--End COPYRIGHTS-->
+            </footer>
+            <!--End FOOTER-->
         </div>
         <!--End CONTAINER-->
     </body>
