header styling is complete =)

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                         </div>
                         <div class="cart-buttons">
                             <div class="cart-button">
-                                <a href="#">View Cart</a>
+                                <a href="#">View cart</a>
                             </div>
-                            <div class="#">
-                                <a href="checkout.html">Check Out</a>
+                            <div class="cart-button">
+                                <a href="#">Check out</a>
                             </div>
                         </div>
                     </div>
