- Banner added; - Header fully completed; - Some fixes;

--- a/index.html
+++ b/index.html
@@ -158,38 +158,27 @@
         <!--Begin BANNER-->
         <div class="banner">
             <!--Begin BANNER BODY-->
-            <div>
-                <span style="font-size:70pt">SUMMER SALE</span><br/>
-                GET UPTO <span style="color:#F08080">50&#37;</span> OFFER!
-                <br/>
-                <img src="/path" alt="Sep">
-                <br/>
-                <span style="color:#F08080">HOT</span> &amp; <span style="color:#F08080">TRENDY</span> <span style="color:#C0C0C0">BRANDED COLLECTION FOR MEN'S</span>
-                <div class="button">
-                    <a href="#">DISCOVER COLLECTION</a>
+            <div class="wrapper">
+                <div class="description-left">
+                    <span class="name">SUMMER SALE</span>
+                    <span class="description">GET UPTO <span class="color-pink">50&#37;</span> OFFER!</span>
+                    <span class="additions">
+                        <span class="color-pink">HOT</span> &amp; <span class="color-pink">TRENDY</span> <span class="color-gainsboro">BRANDED COLLECTION FOR MEN'S</span>
+                    </span>
+                    <div class="button">
+                        <a href="#">DISCOVER COLLECTION</a>
+                    </div>
+                    <!--Begin OFFER TAG-->
+                    <div class="offer-tag">
+                        <div class="text">
+                            <span>GET</span>
+                            <span>20&#37;</span>
+                        </div>
+                    </div>
+                    <!--End OFFER TAG-->
                 </div>
             </div>
             <!--End BANNER BODY-->
-            <!--Begin OFFER TAG-->
-            <div class="offer_tag">
-                <div class="thread">
-                    <img src="/path" alt="thread">
-                </div>
-                <div class="circle">
-                    <img src="/path" alt="circle">
-                    <div class="point">
-                        <img src="/path" alt="point">
-                    </div>
-                    <div class="stroke">
-                        <img src="/path" alt="stroke">
-                        <div class="text">
-                            <p>GET 
-                               20&#37;</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--End OFFER TAG-->
         </div>
         <!--End BANNER-->
         <!--Begin FEATURES-->
